==> masoame/cmake_stm32f103c8t6/user/src/rc522.cpp <==
#include "rc522.hpp"
#include "common.hpp"
#include "stm32f1xx_hal_spi.h"
#include <cstdint>
#include <sys/types.h>

    unsigned char rc522::ReadRawRC(unsigned char Address)
    {
      uint8_t ucAddr;
      uint8_t ucResult=0;
      this->RC522_SDA_LOW();
      HAL_Delay(10);
      ucAddr = ((Address<<1)&0x7E)|0x80;
      this->RC522_ReadWriteByte(ucAddr);
      HAL_Delay(10);
      ucResult=this->RC522_ReadWriteByte(0);
      HAL_Delay(10);
      this->RC522_SDA_HIGH();
      return ucResult;
    }

    void rc522::WriteRawRC(unsigned char Address, unsigned char value)
    {
      uint8_t ucAddr;
      this->RC522_SDA_LOW();
      HAL_Delay(10);
      ucAddr = ((Address<<1)&0x7E) ;
      RC522_ReadWriteByte(ucAddr);
      HAL_Delay(10);
      RC522_ReadWriteByte(value);
      HAL_Delay(10);
      this->RC522_SDA_HIGH();
    }
