==> SoCXin/doc/STM/BSP/RC522/rc522.c <==
#include "rc522.h"
#include "GPIOLIKE51.h"
#include "SYSTICK.h"

unsigned char ReadRawRC(unsigned char Address)
{
		u8 i=0;
		//delay_us(10);
	  PAout(4)=0;
    SPI1s_ReadWriteByte(((Address<<1)&0x7E)|0x80);
		i=SPI1s_ReadWriteByte(0);	
		SPI_I2S_ClearFlag(SPI1, SPI_I2S_FLAG_TXE);	
		//delay_us((u16)10);
		PAout(4)=1;			
		return i;	
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
	PAout(4)=0;	
	//delay_us(10);
	SPI1s_ReadWriteByte((Address<<1)&0x7E);
	//delay_us(10);
	SPI1s_ReadWriteByte(value);
	//delay_us(10);

	SPI_I2S_ClearFlag(SPI1,SPI_I2S_FLAG_TXE);	
	//delay_us((u16)10);
	PAout(4)=1;				
}
